Very rough fix to make Settings Panel visible again.

--- a/src/styles/SettingsPanel.css
+++ b/src/styles/SettingsPanel.css
@@ -63,7 +63,7 @@
 }
 
 .settings-panel section.data-section.coords-display .data-row label {
-  width: 50px;
+  width: 60px;
 }
 
 .settings-panel .select-with-custom-option button {
